# Holo

./: .gitignore  Makefile  README-CN.md  README.md
control-plane/: go.mod
control-plane/migrations/: 0001_initial_schema.sql
data-plane/: Cargo.toml
data-plane/src/: lib.rs  main.rs
data-plane/src/iscsi/: cdb_changer.rs  cdb_dispatch.rs  cdb_drive.rs  cdb_modes.rs  cdb_server.rs  cdb_server_tests.rs  cdb_wire.rs  mod.rs  session.rs
data-plane/src/media/: mod.rs  mount_bridge.rs
data-plane/src/scsi_tape/: command_chain.rs  command_chain_tests.rs  commands_core.rs  error.rs  identity.rs  identity_tests.rs  mam.rs  mam_tests.rs  mod.rs  profiles.rs  reservation.rs  sense.rs  sense_tests.rs  space_mode_tests.rs  state.rs  test_utils.rs  worm_pr_tests.rs
data-plane/src/storage/: blk_map.rs  compaction.rs  compaction_tests.rs  compression.rs  compression_tests.rs  data_path.rs  dedup.rs  dedup_tests.rs  durability_tests.rs  layout.rs  layout_tests.rs  map_chain_tests.rs  map_lookup.rs  metadata.rs  mod.rs  reclaim.rs  recovery_tests.rs  runtime_state.rs  segment.rs  segment_index.rs  segment_index_tests.rs  segment_tests.rs
data-plane/src/telemetry/: events.rs  metrics_exporter.rs  mod.rs
data-plane/src/worm/: enforcer.rs
infra/ci/: mvp-ci.yml
infra/deploy/: docker-compose.yml
release/: SHA256SUMS  holo-vtl-1.0.1-rc2-linux-x86_64.tar.gz.sha256
scripts/: build-release.sh  install-holo-universal.sh  install.sh  lint-guardrails.sh  scan-rust-casts.sh  test-install-holo.sh
web-console/: package-lock.json  package.json  vite.config.ts
(+252 files in other folders)
