[package]
name = "data-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
signal-hook = "0.3"
socket2 = "0.5"
lz4_flex = "0.11"
flate2 = "1"
blake3 = "1"
crc32c = "0.6"

[[bin]]
name = "tcmu_handler"
path = "src/bin/tcmu_handler.rs"
